added modals to index.cshtml

--- a/STEMInsightsApp/STEMInsightsApp.csproj
+++ b/STEMInsightsApp/STEMInsightsApp.csproj
@@ -154,6 +154,7 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\d3.js" />
     <Content Include="Scripts\d3.min.js" />
+    <Content Include="Scripts\data_definition_modals.js" />
     <Content Include="Scripts\home.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
