connection string pointing to WAStemDB_2.

--- a/STEMInsightsAPI/STEMInsightsAPI.csproj
+++ b/STEMInsightsAPI/STEMInsightsAPI.csproj
@@ -133,11 +133,14 @@
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="scripts\d3.js" />
     <Content Include="scripts\d3.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="ClassDiagram1.cd" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
