--- a/STEMInsightsAPI/packages.config
+++ b/STEMInsightsAPI/packages.config
@@ -19,5 +19,6 @@
   <package id="Swashbuckle" version="5.0.0" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.0.0" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.1.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net452" />
 </packages>
