added JSON file from All WA data & implemented new getTitle function to grab the data from the JSON and populate the titles in the drop down

--- a/STEMInsightsApp/STEMInsightsApp.csproj
+++ b/STEMInsightsApp/STEMInsightsApp.csproj
@@ -200,6 +200,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\StemInsights.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Scripts\wa.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
