--- a/STEMInsightsApp/STEMInsightsApp.csproj
+++ b/STEMInsightsApp/STEMInsightsApp.csproj
@@ -222,6 +222,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.1.min.map" />
+    <Content Include="Scripts\wa.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
