--- a/STEMInsightsAPI/Web.config
+++ b/STEMInsightsAPI/Web.config
@@ -57,6 +57,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="WAStemModel" connectionString="data source=tcp:hai2hedeiz.database.windows.net,1433;initial catalog=WAStemDB_2;persist security info=True;user id=sqladmin@hai2hedeiz;password=P0Pstem!;MultipleActiveResultSets==False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />
+    <add name="WAStemModel" connectionString="data source=tcp:hai2hedeiz.database.windows.net,1433;initial catalog=WAStemDB_2;persist security info=True;user id=sqladmin@hai2hedeiz;password=P0Pstem!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
