--- a/STEMInsightsApp/Views/Web.config
+++ b/STEMInsightsApp/Views/Web.config
@@ -31,6 +31,10 @@
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
+    <staticContent>
+      <!--For Azure Deployment-->
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+    </staticContent>
   </system.webServer>
 
   <system.web>
