--- a/STEMInsightsApp/STEMInsightsApp.csproj
+++ b/STEMInsightsApp/STEMInsightsApp.csproj
@@ -174,6 +174,8 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Properties\PublishProfiles\STEMInsightsApp %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\STEMInsightsApp - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\STEMInsightsApp - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\STEMInsightsApp.pubxml">
       <SubType>Designer</SubType>
     </None>
